refactor: module on bootstrap